# miner

./: .gitignore  README.md  hardhat.config.js  package-lock.json  package.json  setup.sh
fabric-simulator/: ethereum-fabric-bridge.js  fabric-simulator.js  package-lock.json  package.json  test-fabric.js
js/: deploy.js  fabric-demo.js  interact.js  miner.js
rust-miner/: Cargo.toml
rust-miner/src/: main.rs
script/: Deploy.s.sol  DeployPolicyClaim.s.sol  PolicyWorkflow.s.sol  StorePolicy.s.sol
src/: HealthInsurance.sol  HealthToken.sol  PolicyClaim.sol  PolicyStorage.sol
