[package]
name = "healthinsurechain-miner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
web3 = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
hex = "0.4"
